Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/AtNonAnnotationTypeTest.out
AtNonAnnotationTypeTest.java:10:28: compiler.err.not.annotation.type: Override
1 error